# duckdb-mysql

./: CMakeLists.txt
src/: CMakeLists.txt  mysql_connection.cpp  mysql_connection_pool.cpp  mysql_extension.cpp  mysql_result.cpp  mysql_scanner.cpp  mysql_storage.cpp  mysql_types.cpp
src/include/: generic_connection_pool.hpp  mysql_connection.hpp  mysql_connection_pool.hpp  mysql_filter_pushdown.hpp  mysql_scanner.hpp  mysql_types.hpp
src/include/storage/: mysql_catalog.hpp  mysql_predicate_analyzer.hpp  mysql_statistics.hpp  mysql_transaction.hpp
src/include/storage/federation/: cost_model.hpp
src/storage/: CMakeLists.txt  mysql_catalog.cpp  mysql_clear_cache.cpp  mysql_predicate_analyzer.cpp  mysql_statistics.cpp  mysql_table_entry.cpp  mysql_transaction.cpp
src/storage/federation/: CMakeLists.txt  cost_model.cpp
test/sql/: adaptive_execution.test  attach_transactions.test  compression_cost_model.test  connection_pool_disabled.test  connection_pool_error_recovery.test  connection_pool_multiple_catalogs.test  connection_pool_reuse.test  connection_pool_settings.test  connection_pool_transactions.test  covering_index.test  execution_plan_cache.test  federation_benchmark.test  federation_benchmark_profile.test  federation_cost_model.test  federation_cost_model_calibration.test  federation_execution_plan.test  federation_execution_strategies.test  federation_hybrid_execution.test  federation_optimizer.test  federation_statistics.test  federation_types.test  histogram_utilization.test  network_calibration.test  optimization_benchmark.test  optimizer_hints.test  partition_pruning.test  (+4 more)
(+1 files in other folders)
